--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,15 +2,24 @@
 %h1= @post.title
 %p= @post.link
 %p= @post.description
+%p= @post.user.name
+%p
+  = @post.get_upvotes.size
+  Likes
+%p
+  = @post.get_downvotes.size
+  Dislikes
+= link_to "Like", like_post_path(@post), method: :get
+= link_to "Dislike", dislike_post_path(@post), method: :get
 
 #comments
-	%h2.comment_count= pluralize(@post.comments.count, "Comment")
-	- @comments.each do |comment|
-		.comment
-			%p.username= comment.user.name
-			%p.content= comment.content
+  %h2.comment_count= pluralize(@post.comments.count, "Comment")
+  - @comments.each do |comment|
+    .comment
+      %p.username= comment.user.name
+      %p.content= comment.content
 
-	= render "comments/form"
+  = render "comments/form"
 
 
 = link_to "Edit", edit_post_path(@post)
