Add haml file on show and index

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -21,6 +21,8 @@
 					%h2= link_to post.title, post
 				.data.clearfix
 					%p.username
+						Shared by
+						= post.user.name
 					%p.buttons
 						%span
 							%i.fa.fa-comments-o
