--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,6 +2,7 @@
 	%h1= @post.title
 	%p.username
 		Shared by
+		= @post.user.name
 		about
 		= time_ago_in_words(@post.created_at)
 	.clearfix
@@ -33,6 +34,8 @@
 					.data.clearfix
 						%p.username
 							Shared by
+
+					
 						%p.buttons
 							%span
 								%i.fa.fa-comments-o
